# amazon-kinesis-video-streams-producer-c

./: .gitignore  .gitmodules  .project  .travis.yml  Auth_8c.html  Auth_8c__incl.map  Auth_8c__incl.md5  AwsV4Signer_8c.html  AwsV4Signer_8c__incl.map  AwsV4Signer_8c__incl.md5  AwsV4Signer_8c_a3242f05235395fe08e93fe928fabb69d_icgraph.map  AwsV4Signer_8c_a3242f05235395fe08e93fe928fabb69d_icgraph.md5  AwsV4Signer_8c_a44b1d3966ce72a73bd52d4c0f40cf241_icgraph.map  AwsV4Signer_8c_a44b1d3966ce72a73bd52d4c0f40cf241_icgraph.md5  AwsV4Signer_8c_a486305f06a6be62b4e9237d17a59a098_icgraph.map  AwsV4Signer_8c_a486305f06a6be62b4e9237d17a59a098_icgraph.md5  AwsV4Signer_8c_a62b4afef0c19c6c33697ca6c67373967_cgraph.map  AwsV4Signer_8c_a62b4afef0c19c6c33697ca6c67373967_cgraph.md5  AwsV4Signer_8c_a62b4afef0c19c6c33697ca6c67373967_icgraph.map  AwsV4Signer_8c_a62b4afef0c19c6c33697ca6c67373967_icgraph.md5  AwsV4Signer_8c_a712ec4f93fdd8f80a848bf99ca6abe34_icgraph.map  AwsV4Signer_8c_a712ec4f93fdd8f80a848bf99ca6abe34_icgraph.md5  AwsV4Signer_8c_a79f3e9d3f66b10f7f16e6c2d18a83a8f_cgraph.map  AwsV4Signer_8c_a79f3e9d3f66b10f7f16e6c2d18a83a8f_cgraph.md5  AwsV4Signer_8c_a79f3e9d3f66b10f7f16e6c2d18a83a8f_icgraph.map  AwsV4Signer_8c_a79f3e9d3f66b10f7f16e6c2d18a83a8f_icgraph.md5  AwsV4Signer_8c_aa67eb49f569dfa8e986445f36832c5f7_icgraph.map  AwsV4Signer_8c_aa67eb49f569dfa8e986445f36832c5f7_icgraph.md5  AwsV4Signer_8c_aa9a42c29594cb306e6ab537c1f45b1c1_icgraph.map  AwsV4Signer_8c_aa9a42c29594cb306e6ab537c1f45b1c1_icgraph.md5  AwsV4Signer_8c_ad218fad7261d0b0045ca697b921ba10c_cgraph.map  AwsV4Signer_8c_ad218fad7261d0b0045ca697b921ba10c_cgraph.md5  AwsV4Signer_8c_ad218fad7261d0b0045ca697b921ba10c_icgraph.map  AwsV4Signer_8c_ad218fad7261d0b0045ca697b921ba10c_icgraph.md5  AwsV4Signer_8c_ad4614a1a0a6694f33c619c20900a48e3_icgraph.map  AwsV4Signer_8c_ad4614a1a0a6694f33c619c20900a48e3_icgraph.md5  AwsV4Signer_8c_ad53483dd2e7e21477168b35af7ae5df8_icgraph.map  AwsV4Signer_8c_ad53483dd2e7e21477168b35af7ae5df8_icgraph.md5  AwsV4Signer_8c_ae41b196e12580d13f81dae8c852e85d8_icgraph.map  AwsV4Signer_8c_ae41b196e12580d13f81dae8c852e85d8_icgraph.md5  (+1712 more)
.github/: PULL_REQUEST_TEMPLATE.md  build_windows.bat  run_with_iot.bat
.github/ISSUE_TEMPLATE/: bug_report.md  questions-help.md
.github/workflows/: Doxyfile  ci.yml  clang-format.yml  close-stale-issues.yml  codecov.yml  codeql-analysis.yml  doxygen-gh-pages.yml  github_deploy_key.enc  linux-sanitizers.yml  pr-desc-lint.yml  samples.yml  version-check.yml  windows.yml
CMake/: Utilities.cmake
CMake/Dependencies/: libawsauth-CMakeLists.txt  libawscal-CMakeLists.txt  libawscommon-CMakeLists.txt  libawscompression-CMakeLists.txt  libawshttp-CMakeLists.txt  libawsio-CMakeLists.txt  libawslc-CMakeLists.txt  libawssdkutils-CMakeLists.txt  libcurl-CMakeLists.txt  libcurl-cmake-config.patch  libgtest-CMakeLists.txt  libkvspic-CMakeLists.txt  libmbedtls-CMakeLists.txt  libopenssl-1.1.1q-include-string.patch  libopenssl-CMakeLists.txt  libs2ntls-CMakeLists.txt  libwebsockets-CMakeLists.txt
cmake-scripts/: libcurl-CMakeLists.txt  libopenssl-CMakeLists.txt
html/: graph_legend.html  index.html  navtreedata.js
samples/: CanaryStreamCallbacks.cpp  CanaryStreamCallbacks.h  Common.c  KvsAacAudioVideoStreamingSample.c  KvsAudioOnlyStreamingSample.c  KvsAudioVideoMultipleEventsStreamingSample.c  KvsAudioVideoStreamingSample.c  KvsMuLawAudioVideoStreamingSample.c  KvsVideoOnlyOfflineStreamingSample.c  KvsVideoOnlyRealtimeStreamingSample.c  KvsVideoOnlyStreamingSample.c  KvsVideoOnlyStreamingSampleCloudwatch.cpp  Samples.h
samples/alawSampleFrames/: sample-000.alaw  sample-001.alaw  sample-002.alaw  sample-003.alaw  sample-004.alaw  sample-005.alaw  sample-006.alaw  sample-007.alaw  sample-008.alaw  sample-009.alaw  sample-010.alaw  sample-011.alaw  sample-012.alaw  sample-013.alaw  sample-014.alaw  sample-015.alaw  sample-016.alaw  sample-017.alaw  sample-018.alaw  sample-019.alaw  sample-020.alaw  sample-021.alaw  sample-022.alaw  sample-023.alaw  sample-024.alaw  sample-025.alaw  sample-026.alaw  sample-027.alaw  sample-028.alaw  sample-029.alaw  sample-030.alaw  sample-031.alaw  sample-032.alaw  sample-033.alaw  sample-034.alaw  sample-035.alaw  sample-036.alaw  sample-037.alaw  sample-038.alaw  sample-039.alaw  (+960 more)
samples/h265SampleFrames/: frame-001.h265  frame-002.h265  frame-003.h265  frame-004.h265  frame-005.h265  frame-006.h265  frame-007.h265  frame-008.h265  frame-009.h265  frame-010.h265  frame-011.h265  frame-012.h265  frame-013.h265  frame-014.h265  frame-015.h265  frame-016.h265  frame-017.h265  (+386 more)
scripts/: generate-iot-credential.sh  get-iot-certs-windows.bat  get-iot-certs.sh  validate-mkv-containing-tags.sh
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  files_0.js  files_1.js  (+60 more)
src/: CMakeLists.txt
tst/: .CallbacksProviderPublicApiTest.cpp.swp  AuthCallbackTest.cpp  AwsCredentialsTest.cpp  AwsV4SignerTest.cpp  CMakeLists.txt  CallbacksProviderApiFunctionalityTest.cpp  CallbacksProviderApiTest.cpp  CallbacksProviderPublicApiTest.cpp  CurlApiTest.cpp  FileLoggerFunctionalityTest.cpp  InfoProviderApiTest.cpp  IoTCredentialTest.cpp  PlatformCallbackProviderApiTest.cpp  ProducerApiCallCacheTest.cpp  ProducerApiTest.cpp  ProducerBasicUsageTest.cpp  ProducerCallbackProviderApiTest.cpp  ProducerClientBasicTest.cpp  ProducerClientFaultInjectionTest.cpp  ProducerContinuousRetryTest.cpp  ProducerFragmentAggregationTest.cpp  ProducerFunctionalityTest.cpp  ProducerTestFixture.cpp  ProducerTestFixture.h  RequestInfoTest.cpp  RotatingStaticAuthCallbacks.cpp  RotatingStaticAuthCallbacks.h  UtilsApiTest.cpp  main.cpp  sample_file_creds.txt
tst/scripts/: test_cmake_flags.sh
(+964 files in other folders)
